force-app/main/default/objects/T_qtc_OrderHeaders__c/T_qtc_OrderHeaders__c.object-meta.xml
<CustomObject>
    <label>T_qtc_OrderHeaders</label>
    <nameField>
        <label>T_qtc_OrderHeaders</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T_qtc_OrderHeaders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>