force-app/main/default/objects/T_qtc_OrderHeaders__c/fields/Amount_Transaction_Tax_Total__c.field-meta.xml
<CustomField>
    <fullName>Amount_Transaction_Tax_Total__c</fullName>
    <label>Amount (Transaction Tax Total)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>