force-app/main/default/objects/T_qtc_OrderHeaders__c/fields/Due_DateReceive_By__c.field-meta.xml
<CustomField>
    <fullName>Due_DateReceive_By__c</fullName>
    <label>Due Date/Receive By</label>
    <type>Date</type>
</CustomField>